fix(ui): improve readability of 'Scroll' text on countdown page

--- a/static/countdown.css
+++ b/static/countdown.css
@@ -74,7 +74,8 @@ h1 {
     bottom: 0;
     left: 0;
     right: 0;
-    filter: drop-shadow(0 0 15px var(--text-color));
+    filter: drop-shadow(0 0 8px #fff);
+    text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff, 1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
     margin-bottom: 1em;
     user-select: none;
 }
